rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__segment_with_coarser_granularity_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
orders__status | orders__created_at_month | orders__count
---------------+--------------------------+--------------
completed      | 2025-01-01 00:00:00      | 2            
pending        | 2025-01-01 00:00:00      | 1            
cancelled      | 2025-02-01 00:00:00      | 1            
pending        | 2025-03-01 00:00:00      | 1
