rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__standard_pre_agg_coarser_custom_query_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
orders__status | orders__created_at_half_year | orders__count
---------------+------------------------------+--------------
completed      | 2025-01-01 00:00:00          | 5            
pending        | 2025-01-01 00:00:00          | 4            
cancelled      | 2025-01-01 00:00:00          | 1
